--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html{
 
 body{
     align-items: center;
-    background: linear-gradient(320deg,#eb92be,#ffef78,#63c946);
+    background: #232323;
     display: flex;
     font-family: 'Dosis',sans-serif;
     font-display: swap;
@@ -91,7 +91,7 @@ body{
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(35 35 35 0.1);
     color: #fff;
-    background: #d72880
+    background: rgb(255, 149, 0)
 }
 
 .calc-button:last-child:hover{
